syntax = "proto3";

package plugin;

option go_package = "/proto";

service GradingPlugin {
  rpc RegisterPlugin (PluginRequest) returns (PluginResponse);
  rpc ExecutePlugin (PluginExecute) returns (ExecutionStatus);
  rpc UnregisterPlugin (PluginUnregister) returns (UnregisterResponse);
}

message PluginRequest {
  string plugin_name = 1;
  string userRequirement = 2;
}

message PluginResponse {
  bool success = 1;
  string message = 2;
}

message PluginExecute{
  string plugin_name = 1;
}

message ExecutionStatus {
  bool success = 1;
  string message = 2;
  map<string,string> results =3;
}

message PluginUnregister{
  string plugin_name = 1;
}

message UnregisterResponse{
  bool success = 1;
  string message = 2;
}